add function for updating task

--- a/src/main/resources/tasks.json
+++ b/src/main/resources/tasks.json
@@ -6,10 +6,10 @@
   "updatedAt" : "2024-08-15T21:28:26"
 }, {
   "id" : 2,
-  "description" : "testing task",
+  "description" : "update test map to list",
   "status" : "todo",
   "createdAt" : "2024-08-16T15:45:37",
-  "updatedAt" : "2024-08-16T15:45:37"
+  "updatedAt" : "2024-08-16T19:46:08"
 }, {
   "id" : 3,
   "description" : "testing task",
