add delete task function

--- a/src/main/resources/tasks.json
+++ b/src/main/resources/tasks.json
@@ -5,12 +5,6 @@
   "createdAt" : "2024-08-15T21:28:26",
   "updatedAt" : "2024-08-15T21:28:26"
 }, {
-  "id" : 2,
-  "description" : "update test map to list",
-  "status" : "todo",
-  "createdAt" : "2024-08-16T15:45:37",
-  "updatedAt" : "2024-08-16T19:46:08"
-}, {
   "id" : 3,
   "description" : "testing task",
   "status" : "todo",
@@ -18,14 +12,14 @@
   "updatedAt" : "2024-08-16T15:49:54"
 }, {
   "id" : 4,
-  "description" : "testing task",
+  "description" : "new task ba",
   "status" : "todo",
-  "createdAt" : "2024-08-16T15:50:48",
-  "updatedAt" : "2024-08-16T15:50:48"
+  "createdAt" : "2024-08-16T20:16:48",
+  "updatedAt" : "2024-08-16T20:16:48"
 }, {
   "id" : 5,
-  "description" : "go to school",
+  "description" : "new task hehe",
   "status" : "todo",
-  "createdAt" : "2024-08-16T16:16:52",
-  "updatedAt" : "2024-08-16T16:16:52"
+  "createdAt" : "2024-08-16T20:54:39",
+  "updatedAt" : "2024-08-16T20:54:39"
 } ]
