--- a/src/main/resources/tasks.json
+++ b/src/main/resources/tasks.json
@@ -1,7 +1,7 @@
 [ {
   "id" : 1,
   "description" : "Buy groceries",
-  "status" : "in progress",
+  "status" : "done",
   "createdAt" : "2024-08-15T21:28:26",
   "updatedAt" : "2024-08-15T21:28:26"
 }, {
